sql/sql_derived.cc
@@ -64,8 +64,10 @@ mysql_handle_derived(LEX *lex, uint phases)
 {
   bool res= FALSE;
   THD *thd= lex->thd;
+  DBUG_ENTER("mysql_handle_derived");
+  DBUG_PRINT("enter", ("phases: 0x%x", phases));
   if (!lex->derived_tables)
-    return FALSE;
+    DBUG_RETURN(FALSE);
 
   lex->thd->derived_tables_processing= TRUE;
 
@@ -123,7 +125,7 @@ mysql_handle_derived(LEX *lex, uint phases)
     }
   }
   lex->thd->derived_tables_processing= FALSE;
-  return res;
+  DBUG_RETURN(res);
 }
 
 /*
@@ -163,8 +165,10 @@ mysql_handle_single_derived(LEX *lex, TABLE_LIST *derived, uint phases)
   THD *thd= lex->thd;
   uint8 allowed_phases= (derived->is_merged_derived() ? DT_PHASES_MERGE :
                          DT_PHASES_MATERIALIZE);
+  DBUG_ENTER("mysql_handle_single_derived");
+  DBUG_PRINT("enter", ("phases: 0x%x  allowed: 0x%x", phases, allowed_phases));
   if (!lex->derived_tables)
-    return FALSE;
+    DBUG_RETURN(FALSE);
 
   lex->thd->derived_tables_processing= TRUE;
 
@@ -186,7 +190,7 @@ mysql_handle_single_derived(LEX *lex, TABLE_LIST *derived, uint phases)
       break;
   }
   lex->thd->derived_tables_processing= FALSE;
-  return res;
+  DBUG_RETURN(res);
 }
 
 
@@ -353,16 +357,17 @@ bool mysql_derived_merge(THD *thd, LEX *lex, TABLE_LIST *derived)
   uint tablenr;
   SELECT_LEX *parent_lex= derived->select_lex;
   Query_arena *arena, backup;
+  DBUG_ENTER("mysql_derived_merge");
 
   if (derived->merged)
-    return FALSE;
+    DBUG_RETURN(FALSE);
 
   if (dt_select->uncacheable & UNCACHEABLE_RAND)
   {
     /* There is random function => fall back to materialization. */
     derived->change_refs_to_fields();
     derived->set_materialized_derived();
-    return FALSE;
+    DBUG_RETURN(FALSE);
   }
 
  if (thd->lex->sql_command == SQLCOM_UPDATE_MULTI ||
@@ -466,7 +471,7 @@ bool mysql_derived_merge(THD *thd, LEX *lex, TABLE_LIST *derived)
 exit_merge:
   if (arena)
     thd->restore_active_arena(arena, &backup);
-  return res;
+  DBUG_RETURN(res);
 }
 
 
@@ -492,14 +497,15 @@ exit_merge:
 
 bool mysql_derived_merge_for_insert(THD *thd, LEX *lex, TABLE_LIST *derived)
 {
+  DBUG_ENTER("mysql_derived_merge_for_insert");
   if (derived->merged_for_insert)
-    return FALSE;
+    DBUG_RETURN(FALSE);
   if (derived->is_materialized_derived())
-    return mysql_derived_prepare(thd, lex, derived);
+    DBUG_RETURN(mysql_derived_prepare(thd, lex, derived));
   if (!derived->is_multitable())
   {
     if (!derived->single_table_updatable())
-      return derived->create_field_translation(thd);
+      DBUG_RETURN(derived->create_field_translation(thd));
     if (derived->merge_underlying_list)
     {
       derived->table= derived->merge_underlying_list->table;
@@ -507,7 +513,7 @@ bool mysql_derived_merge_for_insert(THD *thd, LEX *lex, TABLE_LIST *derived)
       derived->merged_for_insert= TRUE;
     }
   }  
-  return FALSE;
+  DBUG_RETURN(FALSE);
 }
 
 
@@ -764,9 +770,10 @@ bool mysql_derived_optimize(THD *thd, LEX *lex, TABLE_LIST *derived)
   SELECT_LEX *save_current_select= lex->current_select;
 
   bool res= FALSE;
+  DBUG_ENTER("mysql_derived_optimize");
 
   if (unit->optimized)
-    return FALSE;
+    DBUG_RETURN(FALSE);
   lex->current_select= first_select;
 
   if (unit->is_union())
@@ -806,7 +813,7 @@ bool mysql_derived_optimize(THD *thd, LEX *lex, TABLE_LIST *derived)
   }
 err:
   lex->current_select= save_current_select;
-  return res;
+  DBUG_RETURN(res);
 }
 
 
@@ -829,11 +836,12 @@ err:
 
 bool mysql_derived_create(THD *thd, LEX *lex, TABLE_LIST *derived)
 {
+  DBUG_ENTER("mysql_derived_create");
   TABLE *table= derived->table;
   SELECT_LEX_UNIT *unit= derived->get_unit();
 
   if (table->created)
-    return FALSE;
+    DBUG_RETURN(FALSE);
   select_union *result= (select_union*)unit->result;
   if (table->s->db_type() == TMP_ENGINE_HTON)
   {
@@ -843,13 +851,13 @@ bool mysql_derived_create(THD *thd, LEX *lex, TABLE_LIST *derived)
                                   &result->tmp_table_param.recinfo,
                                   (unit->first_select()->options |
                                    thd->options | TMP_TABLE_ALL_COLUMNS)))
-      return(TRUE);
+      DBUG_RETURN(TRUE);
   }
   if (open_tmp_table(table))
-    return TRUE;
+    DBUG_RETURN(TRUE);
   table->file->extra(HA_EXTRA_WRITE_CACHE);
   table->file->extra(HA_EXTRA_IGNORE_DUP_KEY);
-  return FALSE;
+  DBUG_RETURN(FALSE);
 }
 
 
@@ -879,11 +887,12 @@ bool mysql_derived_create(THD *thd, LEX *lex, TABLE_LIST *derived)
 
 bool mysql_derived_fill(THD *thd, LEX *lex, TABLE_LIST *derived)
 {
+  DBUG_ENTER("mysql_derived_fill");
   SELECT_LEX_UNIT *unit= derived->get_unit();
   bool res= FALSE;
 
   if (unit->executed && !unit->uncacheable && !unit->describe)
-    return FALSE;
+    DBUG_RETURN(FALSE);
   /*check that table creation passed without problems. */
   DBUG_ASSERT(derived->table && derived->table->created);
   SELECT_LEX *first_select= unit->first_select();
@@ -925,7 +934,7 @@ bool mysql_derived_fill(THD *thd, LEX *lex, TABLE_LIST *derived)
     unit->cleanup();
   lex->current_select= save_current_select;
 
-  return res;
+  DBUG_RETURN(res);
 }
 
 
@@ -949,6 +958,7 @@ bool mysql_derived_fill(THD *thd, LEX *lex, TABLE_LIST *derived)
 
 bool mysql_derived_reinit(THD *thd, LEX *lex, TABLE_LIST *derived)
 {
+  DBUG_ENTER("mysql_derived_reinit");
   st_select_lex_unit *unit= derived->get_unit();
 
   if (derived->table)
@@ -958,5 +968,5 @@ bool mysql_derived_reinit(THD *thd, LEX *lex, TABLE_LIST *derived)
   /* for derived tables & PS (which can't be reset by Item_subquery) */
   unit->reinit_exec_mechanism();
   unit->set_thd(thd);
-  return FALSE;
+  DBUG_RETURN(FALSE);
 }
